# Airflow_docker_pineline

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: test.py
